creating junit test for dao layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:starwarsbd
+spring.datasource.username=luke
+spring.datasource.password=redfive
+spring.jpa.hibernate.ddl-auto=create
