--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:h2:mem:starwarsbd
 spring.datasource.username=luke
 spring.datasource.password=redfive
 spring.jpa.hibernate.ddl-auto=create
+
+#Feign REST client
+feign.name=swapi
+feign.url=https://swapi.dev/api
